WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194364
Print backgrounds preference should be honored instead of WKWebViewConfiguration value
https://bugs.webkit.org/show_bug.cgi?id=194364
Summary
Print backgrounds preference should be honored instead of WKWebViewConfigurat...
Alex Christensen
Reported
2019-02-06 15:34:51 PST
Print backgrounds preference should be honored instead of WKWebViewConfiguration value
Attachments
Patch
(2.74 KB, patch)
2019-02-07 10:07 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(2.86 KB, patch)
2019-02-07 10:59 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2019-02-07 10:07:02 PST
Created
attachment 361408
[details]
Patch
Tim Horton
Comment 2
2019-02-07 10:46:42 PST
Comment on
attachment 361408
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=361408&action=review
> Source/WebKit/ChangeLog:15 > + * UIProcess/API/Cocoa/WKWebView.mm:
You need to explain the long-term cleanup plan either here or in the bug, and there should be a new bug tracking it.
Alex Christensen
Comment 3
2019-02-07 10:59:02 PST
Created
attachment 361419
[details]
Patch
Alex Christensen
Comment 4
2019-02-07 11:01:39 PST
https://trac.webkit.org/changeset/241131/webkit
Radar WebKit Bug Importer
Comment 5
2019-02-07 11:02:59 PST
<
rdar://problem/47889813
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug